--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
             <img src=<div class="frame1">
             <img src=<div class="frame1">
             <img src=<div class="frame1">
-            <img src="./finland.jpg"
+            <img src="./images/finland.jpg"
                 class="frame1-image" alt="">
         </div>
         <div class="img-dec">
