--- a/index.html
+++ b/index.html
@@ -126,8 +126,8 @@
             <div class="footer" id="bottom">
                 <h1 class="footer-heading">Get In Touch</h1>
                 <p class="footer-tag1">Email or call us to set up a consult</p>
-                <p class="email">Email: <span> contact@acmephotos.test</span></p>
-                <p class="phone">Phone: <span>(617) 555-5555</span></p>
+                <p class="email">Email: <span> contact@sheetalphotography.test</span></p>
+                <p class="phone">Phone: <span>(+91) 1234567890</span></p>
 
 
             </div>
