--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <div class="home-left">
             <h1 class="home-title">Sheetal Photography</h1>
             <h3 class="home-tag">Beautiful Natural Photography</h3>
-            <button class="home-btn"> Work</button>
+            <button class="home-btn"> id = "#our-work" View our work</button>
         </div>
         <div class="home-right">
             <img src="./images/display.jpg"
@@ -50,7 +50,7 @@
     <!-- Our work -->
     <section class="our-work" id="our-work">
         <div class="heading">
-            <p>Our Work</p>
+            <p>Work Samples</p>
         </div>
         <div class="frame1">
             <img src="./images/scotland.jpg"
@@ -125,7 +125,7 @@
         <footer>
             <div class="footer" id="bottom">
                 <h1 class="footer-heading">Get In Touch</h1>
-                <p class="footer-tag1">Email or call us to set up a consult</p>
+                <p class="footer-tag1">Email or call us to set up a consultion</p>
                 <p class="email">Email: <span> contact@sheetalphotography.test</span></p>
                 <p class="phone">Phone: <span>(+91) 1234567890</span></p>
 
