--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <div class="home-left">
             <h1 class="home-title">Sheetal Photography</h1>
             <h3 class="home-tag">Beautiful Natural Photography</h3>
-            <button class="home-btn" id = "#our-work"> View our work</button>
+           <a id = "#our-work" ><button class="home-btn" > View our work</button>
         </div>
         <div class="home-right">
             <img src="./images/display.jpg"
@@ -34,13 +34,11 @@
     </section>
     <section class="about-us" id="about-us-section">
         <h3 class="about">About</h3>
-        <p class="ab" style="text-indent: 6%;">We invest noteworthy energy in wedding photography, corporate, family and senior pictures, normally heading
-            off to your objective to get the perfect moment in the perfect place.We will be there with you consistently
-            your exceptional minutes are gotten until the end of time.
+        <p class="ab" style="text-indent: 6%;">We employ expert photographers who are experienced in handling weddings, corporate and family events. Our
+            objective is to capture your precious moments through our camera lense. These expectional pictures will stay with you 
+            until the end of time.
 
-            To us photography is about people being veritable and after that allowing us to depict that moment to
-            remember it until the finish of time. This is the story that issues most: authentic people, real stories,
-            certifiable minutes.</p>
+            For us your event is not just another assignment but also about authentic stories, relationships and people. We aim to create visuals that leave a mark.  </p>
     </section>
     <section class="our-services" id="our-services">
         <h3 class="our-services-heading">Our Services</h3>
