--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <div class="home-left">
             <h1 class="home-title">Sheetal Photography</h1>
             <h3 class="home-tag">Beautiful Natural Photography</h3>
-           <a id = "#our-work" ><button class="home-btn" > View our work</button>
+           <a id = "#our-work" <button class="home-btn" > View our work</button> </a>
         </div>
         <div class="home-right">
             <img src="./images/display.jpg"
