--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
     <!-- Our work -->
     <section class="our-work" id="our-work">
         <div class="heading">
-            <p>Work Samples</p>
+            <p>Our work</p>
         </div>
         <div class="frame1">
             <img src="./images/scotland.jpg"
